# automation-agent

./: .dockerignore  .gitignore  .prettierrc  Dockerfile  README.md  app.py  function_calls.py  package-lock.json  pyproject.toml
