[project]
name = "automation-agent"
version = "0.1.0"
description = "Project submission for Tools in Data Science"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.8",
    "numpy>=2.2.2",
    "openai>=1.61.1",
    "pandas>=2.2.3",
    "sentence-transformers>=3.4.1",
    "uvicorn>=0.34.0",
]
