[project]
name = "automation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "httpx>=0.28.1",
    "langdetect>=1.0.9",
    "python-dateutil>=2.9.0.post0",
    "sentence-transformers>=3.4.1",
    "uvicorn>=0.34.0",
]
