[project]
name = "automation-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "langdetect>=1.0.9",
    "openai>=1.63.2",
    "python-dateutil>=2.9.0.post0",
    "scipy>=1.15.2",
    "uvicorn>=0.34.0",
]
